src/validation/tests/snapshots/rusty__validation__tests__variable_validation_tests__overflows__overflows_with_non_global_constants.snap
---
source: src/validation/tests/variable_validation_tests.rs
expression: diagnostics
---
error[E033]: Unresolved constant `c` variable: `a` is no const reference
  ┌─ <internal>:5:24
  │
5 │             c : INT := a + b; // Will overflow
  │                        ^^^^^ Unresolved constant `c` variable: `a` is no const reference
